[package]
name = "rust-travis-eureka"
version = "0.4.2"
authors = ["Adit Cahya Ramadhan <matematika.adit@gmail.com>"]
build = "build.rs"
description = "Print Eureka!"
homepage = "https://github.com/matematikaadit/rust-travis-eureka"
repository = "https://github.com/matematikaadit/rust-travis-eureka"
readme = "README.md"
license = "MIT"

[build-dependencies]
clap = "2.26"

[dependencies]
clap = "2.26"
